--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
 
-//        classpath 'com.enjoy.plugin:asm:1.0'//可灵活打开关闭
+//        classpath 'com.vance.plugin:asm:1.0'//可灵活打开关闭
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
